<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ManaGeo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cell_description">Contents of cell</string>
    <string name="direction">The direction you are facing</string>
    <string name="tile_inventory">Tile Inventory</string>
    <string name="personal_inventory">Personal Inventory</string>
    <string name="structure_interact">Interact</string>
    <string name="title_activity_build">BuildActivity</string>
    <string name="build_title">Choose a structure to build</string>
    <string name="build_mine">Mine</string>
    <string name="build_refinery">Refinery</string>
    <string name="build_warehouse">Warehouse</string>
    <string name="title_activity_interact">TileInteractActivity</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="transfer">Transfer</string>
    <string name="inventory">Inventory</string>
    <string name="mineCost">Cost: 5 Wood</string>
    <string name="refineryCost">Cost: 7 Wood, 3 Granite</string>
    <string name="warehouseCost">Cost: 5 Wood, 2 Granite, 3 Iron Ingot</string>
    <string name="destroy">Destroy</string>
    <string name="coordinates">Coordinates</string>
    <string name="title_activity_citizen">CitizenActivity</string>
    <string name="citizens_employed">Citizens Employed Here</string>
    <string name="citizens_unemployed">Unemployed Citizens</string>
    <string name="title_activity_hire">HireActivity</string>
    <string name="courier_options">Courier Options</string>
    <string name="source_coords">Source Tile Coordinates</string>
    <string name="source_x_coord">Source X Coordinate</string>
    <string name="source_y_coord">Source Y Coordinate</string>
    <string name="source_material">Material to Transport</string>
    <string name="finish">Finish</string>
    <string name="citizens">Citizens</string>
    <string name="build_house">House</string>
    <string name="houseCost">Cost: 3 Wood</string>

</resources>
