<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BuildActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/build_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/mine_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buildMine"
        android:text="@string/build_mine" />

    <TextView
        android:id="@+id/mineCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mineCost" />

    <Button
        android:id="@+id/refinery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buildRefinery"
        android:text="@string/build_refinery" />

    <TextView
        android:id="@+id/refineryCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refineryCost" />

    <Button
        android:id="@+id/warehouse_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buildWarehouse"
        android:text="@string/build_warehouse" />

    <TextView
        android:id="@+id/warehouseCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warehouseCost" />
    
    <Button
        android:id="@+id/house_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buildHouse"
        android:text="@string/build_house" />

    <TextView
        android:id="@+id/houseCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/houseCost" />

</LinearLayout>