<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/tile_inventory"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/tile_inventory_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
    </ListView>

    <TextView
        android:id="@+id/mineCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/personal_inventory"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/personal_inventory_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
    </ListView>

    <Button
        android:id="@+id/transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="transfer"
        android:text="@string/transfer" />

</LinearLayout>
