<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:columnCount="4"
        android:rowCount="3" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="0"
            android:layout_row="0"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="1"
            android:layout_row="0"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="2"
            android:layout_row="0"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="0"
            android:layout_row="1"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="1"
            android:layout_row="1"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="2"
            android:layout_row="1"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="0"
            android:layout_row="2"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="1"
            android:layout_row="2"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="2"
            android:layout_row="2"
            android:contentDescription="@string/cell_description"
            android:src="@drawable/no_gps" />

        <ImageView
            android:id="@+id/direction"
            android:layout_width="@dimen/cellDimen"
            android:layout_height="@dimen/cellDimen"
            android:layout_column="1"
            android:layout_row="1"
            android:contentDescription="@string/direction"
            android:src="@drawable/direction" />

    </GridLayout>

    <Button
        android:id="@+id/inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="inventory"
        android:text="@string/inventory" />

    <Button
        android:id="@+id/interact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="interact"
        android:text="@string/structure_interact" />

</LinearLayout>